// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stat renders with color new-horizon 1`] = `
<li
  className="ax-stat-cards__stat ax-stat-cards__stat--new-horizon"
>
  <h3
    className="ax-space--x2 ax-text--size-headline"
  >
    Lorem
  </h3>
</li>
`;

exports[`Stat renders with color giant-leap 1`] = `
<li
  className="ax-stat-cards__stat ax-stat-cards__stat--giant-leap"
>
  <h3
    className="ax-space--x2 ax-text--size-headline"
  >
    Lorem
  </h3>
</li>
`;

exports[`Stat renders with color ground-control 1`] = `
<li
  className="ax-stat-cards__stat ax-stat-cards__stat--ground-control"
>
  <h3
    className="ax-space--x2 ax-text--size-headline"
  >
    Lorem
  </h3>
</li>
`;

exports[`Stat renders with color primeval-soup 1`] = `
<li
  className="ax-stat-cards__stat ax-stat-cards__stat--primeval-soup"
>
  <h3
    className="ax-space--x2 ax-text--size-headline"
  >
    Lorem
  </h3>
</li>
`;

exports[`Stat renders with color terra-form 1`] = `
<li
  className="ax-stat-cards__stat ax-stat-cards__stat--terra-form"
>
  <h3
    className="ax-space--x2 ax-text--size-headline"
  >
    Lorem
  </h3>
</li>
`;

exports[`Stat renders with color luna-dust 1`] = `
<li
  className="ax-stat-cards__stat ax-stat-cards__stat--luna-dust"
>
  <h3
    className="ax-space--x2 ax-text--size-headline"
  >
    Lorem
  </h3>
</li>
`;

exports[`Stat renders with color serene-sea 1`] = `
<li
  className="ax-stat-cards__stat ax-stat-cards__stat--serene-sea"
>
  <h3
    className="ax-space--x2 ax-text--size-headline"
  >
    Lorem
  </h3>
</li>
`;

exports[`Stat renders with color blast-off 1`] = `
<li
  className="ax-stat-cards__stat ax-stat-cards__stat--blast-off"
>
  <h3
    className="ax-space--x2 ax-text--size-headline"
  >
    Lorem
  </h3>
</li>
`;

exports[`Stat renders with color critical-mass 1`] = `
<li
  className="ax-stat-cards__stat ax-stat-cards__stat--critical-mass"
>
  <h3
    className="ax-space--x2 ax-text--size-headline"
  >
    Lorem
  </h3>
</li>
`;

exports[`Stat renders with color paradise-lost 1`] = `
<li
  className="ax-stat-cards__stat ax-stat-cards__stat--paradise-lost"
>
  <h3
    className="ax-space--x2 ax-text--size-headline"
  >
    Lorem
  </h3>
</li>
`;

exports[`Stat renders with color tiny-clanger 1`] = `
<li
  className="ax-stat-cards__stat ax-stat-cards__stat--tiny-clanger"
>
  <h3
    className="ax-space--x2 ax-text--size-headline"
  >
    Lorem
  </h3>
</li>
`;

exports[`Stat renders with color moon-lagoon 1`] = `
<li
  className="ax-stat-cards__stat ax-stat-cards__stat--moon-lagoon"
>
  <h3
    className="ax-space--x2 ax-text--size-headline"
  >
    Lorem
  </h3>
</li>
`;

exports[`Stat renders with defaultProps 1`] = `
<li
  className="ax-stat-cards__stat"
>
  <h3
    className="ax-space--x2 ax-text--size-headline"
  >
    Lorem
  </h3>
</li>
`;
